# cgcv2

./: .directory  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  compile_commands.json
cg/: Makefile  cmake_install.cmake
cg/task2/: CMakeLists.txt  Makefile  box_interpolation.xml  box_modulation.xml  box_rotation.xml  box_translation.xml  cmake_install.cmake  gingerbread_modulation.xml  gingerbread_walk.xml  gingerbread_wave.xml  justin_jump.xml  justin_modulation.xml  justin_walk.xml  main.cpp  spline.xml  task2.cpp  task2.h  tree.xml  weights.xml
cg/task2/data/joint_transformations/: box_interpolation  box_rotation  box_translation  gingerbread_walk  gingerbread_wave  justin_jump  justin_walk  tree  weights
cg/task2/data/models/: Ginger_base.iqm  Ginger_walk.iqm  Ginger_wave.iqm  Justin_base.iqm  Justin_idle.iqm  Justin_jump.iqm  Justin_strafe.iqm  Justin_walk.iqm  box_base.iqm  box_interpolation.iqm  box_rotation.iqm  box_translation.iqm  tree_animation.iqm  tree_base.iqm  weights_animation.iqm  weights_base.iqm
cg/task2/data/shaders/: shader.fsh  shader.vsh
cg/task2/dep/: Makefile  cmake_install.cmake
cg/task2/dep/glfw/: Makefile  cmake_install.cmake
cg/task2/dep/glfw/src/: Makefile  cmake_install.cmake
cg/task2/framework/: Animation.cpp  Animation.h  Camera.cpp  Camera.h  Config.cpp  Config.h  GLBuffer.cpp  GLBuffer.h  IModelDrawer.cpp  IModelDrawer.h  IQMImporter.cpp  IQMImporter.h  Image.cpp  Image.h  InFile.cpp  InFile.h  Input.h  Joint.cpp  Joint.h  Keyframe.cpp  Keyframe.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelDrawer.cpp  ModelDrawer.h  PointLight.cpp  PointLight.h  Shader.cpp  Shader.h  Spline.cpp  Spline.h  SplineDrawer.cpp  SplineDrawer.h  Window.cpp  (+1 more)
cgcvcommon/: CMakeLists.txt  Makefile  cfg_config.cpp  cfg_config.h  cfg_container.cpp  cfg_container.h  cfg_conversion.h  cfg_testcase.h  cmake_install.cmake
cgcvcommon/lpng158/: CMakeLists.txt  pngrtran.c
cgcvcommon/tinyxml/: CMakeLists.txt  Makefile  cmake_install.cmake
cgcvcommon/zlib-1.2.6/: deflate.c  infback.c  inffast.c  inflate.c  trees.c
cv/: Makefile  cmake_install.cmake
cv/task2/: CMakeLists.txt  FaceInfo.h  Makefile  boyhood.xml  cmake_install.cmake  cvtask2  emma.xml  main.cpp
cv/task2/data/training_data/: image00014_46714_s.png.txt  image00028_46724_s.png.txt  image00039_46725_s.png.txt  image00040_46726_s.png.txt  image00041_46727_s.png.txt  image00042_46728_s.png.txt  image00043_46729_s.png.txt  image00044_46730_s.png.txt  image00045_46731_s.png.txt  image00046_63151_s.png.txt  image00047_55079_s.png.txt  image00048_55080_s.png.txt  image00049_46735_s.png.txt  image00050_55082_s.png.txt  image00051_46737_s.png.txt  image00052_55084_s.png.txt  image00053_55085_s.png.txt  image00054_46740_s.png.txt  image00055_46741_s.png.txt  image00056_46742_s.png.txt  image00057_46743_s.png.txt  image00058_46744_s.png.txt  image00059_46745_s.png.txt  image00060_46746_s.png.txt  image00061_46747_s.png.txt  image00062_55094_s.png.txt  image00063_46749_s.png.txt  image00064_46750_s.png.txt  image00065_46751_s.png.txt  image00066_55098_s.png.txt  image00067_46753_s.png.txt  image00084_55113_s.png.txt  image00092_55116_s.png.txt  image00100_55120_s.png.txt  image00101_55062_s.png.txt  image00122_39352_s.png.txt  image00135_55130_s.png.txt  image00144_39355_s.png.txt  image00148_55134_s.png.txt  image00165_55139_s.png.txt  (+158 more)
